<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textViewUsername"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:text="@string/username_title"/>
    <TextView
            android:text="@string/balance_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textViewBalance"
            app:layout_constraintTop_toBottomOf="@+id/textViewUsername" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/email_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textViewId"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmail" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/id_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textViewEmail"
            app:layout_constraintTop_toBottomOf="@+id/textViewBalance" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/create_transaction_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCreateTransaction" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/history_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnHistory" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnCreateTransaction" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>