<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextEmail" android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
                android:hint="@string/email_main_title"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextPassword" android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
                android:hint="@string/password_title"/>
        <Button
                android:text="@string/sign_in_main_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnSignIn" android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"/>
        <TextView
                android:text="@string/sign_up_main_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnSignUp"
                android:gravity="center_horizontal|center_vertical" android:padding="10dp"
                android:layout_marginBottom="8dp" android:layout_marginTop="8dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>